--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;700&family=Roboto:wght@400;500&display=swap');
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
+  background-color: #181d29;
+  color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
 .container {
@@ -12,17 +16,19 @@ body {
 }
 
 .nav {
-  background-color: #333;
+  background-color: none;
   color: white;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
   gap: 2rem;
-  padding: 0 1rem;
+
+  padding: 1rem 4rem;
 }
 
-.site-title {
+.nav .site-title {
   font-size: 2rem;
+  font-weight: 700;
 }
 
 .nav ul {
@@ -30,7 +36,8 @@ body {
   margin: 0;
   list-style: none;
   display: flex;
-  gap: 1rem;
+  gap: 3rem;
+  font-size: 14px;
 }
 
 .nav a {
@@ -39,13 +46,36 @@ body {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: .25rem;
+  padding: 0.25rem;
 }
 
 .nav li.active {
-  background-color: #555;
+  /* background-color: #555; */
+  font-weight: 700;
 }
 
 .nav li:hover {
-  background-color: #777;
+  font-weight: 700;
+  /* background-color: #777; */
+}
+.nav a:hover {
+  font-weight: 700;
+  /* background-color: #777; */
+}
+
+.yt-link {
+  padding: 0.1rem 0.7rem;
+  background-color: #ff0000;
+  color: white;
+  border-radius: 7px;
+  font-weight: 700;
+  border: none;
+}
+.yt-link i {
+  margin-right: 0.4rem;
+}
+.center-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
