--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -14,7 +14,12 @@ body {
   margin: 0;
   text-align: center;
 }
+a{
+  text-decoration: none;
+  color: inherit;
+}
 
+/* nav  */
 .nav {
   background-color: none;
   color: white;
@@ -78,6 +83,17 @@ body {
   justify-content: center;
   align-items: center;
 }
+.nav .menu-btn i{
+  color: #ffffff;
+  font-size: 22px;
+  margin-top: 15px;
+  cursor: pointer;
+  display: none;
+}
+#click{
+  display: none;
+}
+/* end-nav */
 
 /* home-css  */
 .header {
@@ -203,5 +219,8 @@ body {
   font-size: 19px;
   line-height: 120%;
   color: #ffffff;
+}
+.media-query-image{
+  display: none;
 }
 /* end-home-css */
